# AlgAudio

./: .gitignore  CMakeLists.txt  README.md  example.xml
algaudio/: CMakeLists.txt  main.cpp
cmake/: CopyMacros.cmake  FindPortaudio.cmake  FindSDL2.cmake
doc/: CMakeLists.txt  Doxyfile.in  modules.md  pages.txt.in
examples/: example1.algaudio  example2.algaudio  example3.algaudio  example3b.algaudio  example3c.algaudio  example4.algaudio  example5.algaudio  firstsaveever.algaudio  risett.algaudio  subpatch.algaudio
fonts/: Molengo-OFL.txt
libalgaudio/: BuiltinModules.cpp  CMakeLists.txt  Canvas.cpp  CanvasView.cpp  CanvasXML.cpp  Color.cpp  Config.cpp  Console.cpp  DrawContext.cpp  LateReply.cpp  LateReturn.cpp  LaunchConfigWindow.cpp  LibLoader.cpp  MainWindow.cpp  Module.cpp  ModuleCollection.cpp  ModuleFactory.cpp  ModuleSelector.cpp  ModuleTemplate.cpp  OSC.cpp  ParamController.cpp  SCLang.cpp  SCLangSubprocess.cpp  SCLauncher.cpp  SDLHack.cpp  SDLHacks.txt  SDLHandle.cpp  SDLMain.cpp  SDLTexture.cpp  Signal.cpp  Subprocess.cpp  TextRenderer.cpp  Theme.cpp  Timer.cpp  Utilities.cpp  Window.cpp
libalgaudio/BuiltinModules/: Subpatch.cpp
libalgaudio/ModuleUI/: StandardModuleGUI.cpp  UISlider.cpp
libalgaudio/SDLFix/: SDLFix.cpp  SDLFix.hpp  SDL_ABI.hpp
libalgaudio/UI/: DrawContext.cpp  SDLHack.cpp  StandardModuleGUI.cpp  StandardModuleGUI.hpp  UIAlert.cpp  UIAnimDrawer.cpp  UIBox.cpp  UIButton.cpp  UICentered.cpp  UICheckbox.cpp  UIClickable.cpp  UILabel.cpp  UILayered.cpp  UIList.cpp  UIMarginBox.cpp  UIMouseEventsBase.cpp  UIPathSelector.cpp  UIPosition.cpp  UIProgressBar.cpp  UISeparator.cpp  UISlider.cpp  UISpinEntry.cpp  UITextArea.cpp  UITextEntry.cpp  UIVBox.cpp  UIWidget.cpp  UIWindow.cpp
libalgaudio/include/: Alertable.hpp  BuiltinModules.hpp  Canvas.hpp  CanvasView.hpp  CanvasXML.hpp  Color.hpp  Config.hpp  Console.hpp  DrawContext.hpp  DynamicallyLoadableClass.hpp  Exception.hpp  LateReply.hpp  LateReturn.hpp  LaunchConfigWindow.hpp  LibLoader.hpp  MainWindow.hpp  Module.hpp  ModuleCollection.hpp  ModuleFactory.hpp  ModuleSelector.hpp  ModuleTemplate.hpp  OSC.hpp  ParamController.hpp  SCLang.hpp  SCLangSubprocess.hpp  SCLauncher.hpp  SDLHandle.hpp  SDLMain.hpp  SDLTexture.hpp  Signal.hpp  Subprocess.hpp  TextRenderer.hpp  Theme.hpp  Timer.hpp  Utilities.hpp  Version.hpp.in  Window.hpp  rapidxml_algaudio.hpp
libalgaudio/include/ModuleUI/: ModuleGUI.hpp  StandardModuleGUI.hpp  UISlider.hpp
libalgaudio/include/UI/: DrawContext.hpp  ModuleGUI.hpp  StandardModuleGUI.hpp  UIAlert.hpp  UIAnimDrawer.hpp  UIBox.hpp  UIButton.hpp  UICentered.hpp  UICheckbox.hpp  UIClickable.hpp  UIContainer.hpp  UILabel.hpp  UILayered.hpp  UIList.hpp  UIMarginBox.hpp  UIMouseEventsBase.hpp  UIPathSelector.hpp  UIPosition.hpp  UIProgressBar.hpp  UISeparator.hpp  UISlider.hpp  UISpinEntry.hpp  UITextArea.hpp  UITextEntry.hpp  UIVBox.hpp  UIVisibilityBase.hpp  UIWidget.hpp  UIWindow.hpp
libs/: CMakeLists.txt  liblo-0.28.patch
libs/rapidxml/: rapidxml_print.hpp
modules/: CMakeLists.txt  example.xml
modules/base/: CMakeLists.txt  base.cpp  base.xml
modules/builtin/: CMakeLists.txt  builtin.xml
modules/debug/: CMakeLists.txt  debug.cpp  debug.xml
package/: buildexample.sh  linux_launcher.sh  package-linux.sh  package-windows.sh
sc/: CMakeLists.txt  main.sc
